// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onSubmit when all data is provided 1`] = `
<div>
  <div>
    <form>
      <label
        for="stepType"
      >
        Step Type
      </label>
      <select
        id="stepType"
      >
        <option
          value="Activity"
        >
          Activity
        </option>
        <option
          value="Rest"
        >
          Rest
        </option>
      </select>
      <label
        for="stepName"
      >
        Step Name
      </label>
      <input
        id="stepName"
        placeholder="Step name"
        type="text"
        value="Pull-ups"
      />
      <label
        for="stepDuration"
      >
        Step Duration
      </label>
      <input
        id="stepDuration"
        placeholder="Duration (seconds)"
        step="1"
        type="number"
        value="20"
      />
      <button>
        Add Step
      </button>
    </form>
  </div>
</div>
`;

exports[`should render StepForm correctly 1`] = `
<div>
  <div>
    <form>
      <label
        for="stepType"
      >
        Step Type
      </label>
      <select
        id="stepType"
      >
        <option
          value="Activity"
        >
          Activity
        </option>
        <option
          value="Rest"
        >
          Rest
        </option>
      </select>
      <label
        for="stepName"
      >
        Step Name
      </label>
      <input
        id="stepName"
        placeholder="Step name"
        type="text"
        value=""
      />
      <label
        for="stepDuration"
      >
        Step Duration
      </label>
      <input
        id="stepDuration"
        placeholder="Duration (seconds)"
        step="1"
        type="number"
        value="0"
      />
      <button>
        Add Step
      </button>
    </form>
  </div>
</div>
`;

exports[`should throw error when adding step with no data 1`] = `
<div>
  <div>
    <p>
      Please fill in all fields
    </p>
    <form>
      <label
        for="stepType"
      >
        Step Type
      </label>
      <select
        id="stepType"
      >
        <option
          value="Activity"
        >
          Activity
        </option>
        <option
          value="Rest"
        >
          Rest
        </option>
      </select>
      <label
        for="stepName"
      >
        Step Name
      </label>
      <input
        id="stepName"
        placeholder="Step name"
        type="text"
        value=""
      />
      <label
        for="stepDuration"
      >
        Step Duration
      </label>
      <input
        id="stepDuration"
        placeholder="Duration (seconds)"
        step="1"
        type="number"
        value="0"
      />
      <button>
        Add Step
      </button>
    </form>
  </div>
</div>
`;
